chore(build): update owner heuristic internals